# ld49

./: .gitmodules  README.md  index.html  meson.build
cross/: emscripten.txt
res/: font.txt  notes.txt
res/shaders/: generic-fragment.glsl  generic-vertex.glsl
src/: main.cpp  sprite.hpp  text.hpp  time.hpp  window.hpp
src/gl/: buffer.hpp  mesh.hpp  shader.hpp  texture.hpp  vertex.hpp
